# code-names-bot-clue-generator

./: README.md  config.py  pyproject.toml
code_names_bot_clue_generator/clue_guesser/: clue_guesser.py  vector_guesser.py
code_names_bot_clue_generator/evaluation/: evaluate_scenarios.py
code_names_bot_clue_generator/text_graph/: dual_tree_expansion.py  path_to_text.py  path_utils.py  paths_matcher.py  text_graph.py
code_names_bot_clue_generator/threshold_clues/: set_threshold_clues.py
static/: scenarios.yaml  threshold_clues.json  threshold_clues_old.json
tools/: gensim_tester.py  merge_compounds.py  paths_explorer.py  view_text_senses.py
