[tool.poetry]
name = "code-names-bot-clue-generator"
version = "0.1.0"
description = ""
authors = ["Nalu Zou"]
readme = "README.md"
packages = [{include = "code_names_bot_clue_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
isort = "^5.10.1"
networkx = "^2.8.8"

[tool.poetry.scripts]
format                                  = "tasks:format"

paths-explorer                          = "tools.paths_explorer:main"
view-text-senses                        = "tools.view_text_senses:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
