[tool.poetry]
name = "code-names-bot-clue-generator"
version = "0.1.0"
description = ""
authors = ["Nalu Zou"]
readme = "README.md"
packages = [{include = "code_names_bot_clue_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
isort = "^5.10.1"
networkx = "^2.8.8"
gensim = "^4.2.0"
PyYAML = "^6.0"

[tool.poetry.scripts]
format                                  = "tasks:format"

evaluate-scenarios                      = "code_names_bot_clue_generator.evaluation.evaluate_scenarios:main"

paths-explorer                          = "tools.paths_explorer:main"
view-text-senses                        = "tools.view_text_senses:main"
gensim-tester                           = "tools.gensim_tester:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
